--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,55 +17,55 @@
   <h3>Please say from 0 to 10 how much you like the following:</h3>
   <div class="field">
     <%= f.label "Art" %><br>
-    <%= f.number_field :c1 %>
+    <%= f.number_field :art_score %>
   </div>
   <div class="field">
     <%= f.label "Comics" %><br>
-    <%= f.number_field :c2 %>
+    <%= f.number_field :comics_score %>
   </div>
   <div class="field">
     <%= f.label "Dance" %><br>
-    <%= f.number_field :c3 %>
+    <%= f.number_field :dance_score %>
   </div>
   <div class="field">
     <%= f.label "Design" %><br>
-    <%= f.number_field :c4 %>
+    <%= f.number_field :design_score %>
   </div>
   <div class="field">
     <%= f.label "Fashion" %><br>
-    <%= f.number_field :c5 %>
+    <%= f.number_field :fashion_score %>
   </div>
   <div class="field">
     <%= f.label "Film/Video" %><br>
-    <%= f.number_field :c6 %>
+    <%= f.number_field :film_score %>
   </div>
   <div class="field">
     <%= f.label "Food" %><br>
-    <%= f.number_field :c7 %>
+    <%= f.number_field :food_score %>
   </div>
   <div class="field">
     <%= f.label "Games" %><br>
-    <%= f.number_field :c8 %>
+    <%= f.number_field :games_score %>
   </div>
   <div class="field">
     <%= f.label "Music" %><br>
-    <%= f.number_field :c9 %>
+    <%= f.number_field :music_score %>
   </div>
   <div class="field">
     <%= f.label "Photography" %><br>
-    <%= f.number_field :c10 %>
+    <%= f.number_field :photography_score %>
   </div>
   <div class="field">
     <%= f.label "Publishing" %><br>
-    <%= f.number_field :c11 %>
+    <%= f.number_field :publishing_score %>
   </div>
   <div class="field">
     <%= f.label "Technology" %><br>
-    <%= f.number_field :c12 %>
+    <%= f.number_field :technology_score %>
   </div>
   <div class="field">
     <%= f.label "Theater" %><br>
-    <%= f.number_field :c13 %>
+    <%= f.number_field :theater_score %>
   </div>
 
   <div class="actions">
