add helper methods to user, center models, add set_user_from_* methods for recommendations controller, implement additional method in admin controller to give ks users their centers in the database

--- a/app/views/users/recommend.html.erb
+++ b/app/views/users/recommend.html.erb
@@ -1,7 +1,10 @@
-Login with Facebook
-<%= link_to "Dead link" %><br>
+<% if !logged_in? %>
+  Login with Facebook
+  <%= link_to "Dead link" %><br>
 
-User Survey
- 
-<%= render 'form' %>
-
+  <%= link_to "User Survey", new_path %>
+<% else %>
+  <% form_for(@recommendation) do |f| %>
+  
+  <%= f.submit "Recommend!" %>
+<% end %>
