--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -15,3 +15,7 @@ This project was backed by <%= @neighbor.name %><br>
   <%= link_to unit[0].title, "http://www.kickstarter.com" + unit[0].url %> : <%= unit[1] %><br>
   <% end %>
 <% end %>
+
+<footer>
+  Built with <img src="http://www.iconsdb.com/icons/preview/FF6666/brain-xxl.png" width="25" height="25"> by @jnoconor and @polycarpou @flatironschool
+</footer>
