--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RecommenderApp</title>
+  <title>Kickammender!</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav>
+    <%= link_to "Home", root_path %>
+    <%= link_to "About", about_path %>
+    ....Socials icons....
+    <%= link_to "Admin", admin_path %>
+  </nav>
 
 <%= yield %>
+
+<br><br><br>
+<footer>
+  Made with <%= image_tag "brain-xxl.png", size: "20x20"%> by <a href="http://www.twitter.com/jnoconor">@jnoconor</a> and <a href="http://www.twitter.com/mpolycar">@mpolycar</a>.
+</footer>
 
 </body>
 </html>
