--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -14,11 +14,12 @@ This project was backed by <%= @neighbor.name %><br>
 <img src="<%= @neighbor.image_url %>">
 <% end %><br>
 <% if @ranked_active_projects %>
-<% @array.each do |unit| %>
-  <%= link_to unit[0].title, "http://www.kickstarter.com" + unit[0].url %> : <%= unit[1] %><br>
-  <%= form_tag :controller => "users", :action => 'adjust_score' %>
-    <%= submit_tag "good recommendation", :id => "true" %>
-    <%= submit_tag "bad recommendation", :id => "false" %>
-    <%= hidden_field_tag "category", unit[0].category %>
-<% end %>
+  <% @array.each do |unit| %>
+    <%= form_tag :controller => "users", :action => 'adjust_score' do %>
+      <%= link_to unit[0].title, "http://www.kickstarter.com" + unit[0].url %> : <%= unit[1] %><br>
+      <%= submit_tag "true", name: "feedback" %>
+      <%= submit_tag "false", name: "feedback" %>
+      <input type="hidden" id="<%= unit[0].title %>>" name="category" value="<%= unit[0].parent_category %>"><Br>
+      <% end %>
+  <% end %>
 <% end %>
