hacked sessions/show to do better at grabbing facebook likes -- temporary solution, pre-omniauth

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,10 @@
 
 <%= yield %>
 
-<br><br><br>
-<footer>
+<div style="clear:both">
+  </div>
+<br><br><br><br>
+<footer style="clear:both">
   Made with <%= image_tag "brain-xxl.png", size: "20x20"%> by <a href="http://www.twitter.com/jnoconor">@jnoconor</a> and <a href="http://www.twitter.com/mpolycar">@mpolycar</a>.
 </footer>
 
