--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%= link_to "About", about_path %>
     ....Socials icons....
     <%= link_to "Admin", admin_path %>
+    <%= link_to "Logout", logout_path, :id => "logout" %>
   </nav>
 
 <%= yield %>
