--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   </div>
 <br><br><br><br>
 <footer style="clear:both">
-  Made with <%= image_tag "brain-xxl.png", size: "20x20"%> by <a href="http://www.twitter.com/jnoconor">@jnoconor</a> and <a href="http://www.twitter.com/mpolycar">@mpolycar</a>.
+  Made with <%= image_tag "brain-xxl.png", size: "20x20"%> by <a href="http://www.twitter.com/jnoconor">@jnoconor</a> and <a href="http://www.twitter.com/mpolycar">@mpolycar</a> in NYC.
 </footer>
 
 </body>
