update logout so that it is functional again

--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -70,7 +70,7 @@
                   <li class="active"><a href="#homeFullScreen">Home</a> </li>
                   <li><a href="#recommendations">Your Recs</a> </li>
                   <li><a href="#profile"></i>Your Profile</a> </li>
-                  <li><a href="/sessions/logout">Logout</a> </li>
+                  <li><a id="logout" href="/sessions/logout">Logout</a> </li>
                   <li><a href="#about">How This Works</a> </li>
                 </ul>
               </div>
