--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,11 @@
 <html>
 <head>
   <title>Kickammender!</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
+  <%= javascript_include_tag "application"%>
+  <%= stylesheet_link_tag "application" %>
 </head>
 <body>
   <nav>
-
   </nav>
 
 <%= yield %>
