--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,129 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
 <head>
-  <title>Kickammender!</title>
   <%= javascript_include_tag "application"%>
   <%= stylesheet_link_tag "application" %>
-</head>
-<body>
-  <nav>
-  </nav>
+    <!-- Basic Page Needs
+    ================================================== -->
+    <meta charset="utf-8">
+    <title>The Kickammender -- An Intelligent Recommendation Engine for Kickstarter</title>
+    <meta name="description" content="Kickammender is an intelligent recommendation engine for potential Kickstarter backers.">
+    <meta name="author" content="Little NEKO">
+    <!-- Mobile Specific Metas
+    ================================================== -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- CSS
+    ================================================== -->
+    <!-- Bootstrap  -->
+    <link type="text/css" rel="stylesheet" href="assets/bootstrap.min.css">
+    <!-- web font  -->
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800" rel="stylesheet" type="text/css">
+    <!-- plugin css  -->
+    <link rel="stylesheet" type="text/css" href="assets/js-plugin/animation-framework/animate.css" />
+    <link rel="stylesheet" type="text/css" href="assets/js-plugin/magnific-popup/magnific-popup.css" />
+    <link type="text/css" rel="stylesheet" href="assets/js-plugin/isotope/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/flexslider.css" />
+    <link rel="stylesheet" type="text/css" href="assets/js-plugin/pageSlide/jquery.pageslide.css" />
+    <!-- Owl carousel-->
+    <link rel="stylesheet" href="assets/js-plugin/owl.carousel/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="assets/js-plugin/owl.carousel/owl-carousel/owl.theme.css">
+    <!-- icon fonts -->
+    <link type="text/css" rel="stylesheet" href="assets/custom-icons.css">
+    <link type="text/css" rel="stylesheet" href="assets/custom-icons-ie7.css">
+    <!-- Custom css -->
+    <link type="text/css" rel="stylesheet" href="assets/layout.css">
+    <link type="text/css" id="colors" rel="stylesheet" href="assets/green.css">
+    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
+    <script src="assets/modernizr-2.6.1.min.js"></script>
+    <!-- Favicons
+    ================================================== -->
+    <link rel="shortcut icon" href="assets/favicon.ico">
+    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/apple-touch-icon-144x144.png">
+  </head>
+
+<!-- ========== end header ========== -->
 
 <%= yield %>
 
-<div style="clear:both">
-  </div>
-<br><br><br><br>
-<footer style="clear:both">
-  Made with <%= image_tag "brain-xxl.png", size: "20x20"%> by <a href="http://www.twitter.com/jnoconor">@jnoconor</a> and <a href="http://www.twitter.com/mpolycar">@mpolycar</a> in NYC.
+<!-- ========== footer ============= -->
+<footer class="color4">
+  <section id="mainFooter">
+    <div class="container" id="footer">
+      <div class="row">
+        <div class="col-xs-4 pull-left">
+          <div class="footerWidget pull-left">
+
+            <h3>  Made with <%= image_tag "brain-xxl.png", size: "20x20"%> by <a href="http://www.twitter.com/jnoconor">@jnoconor</a> and <a href="http://www.twitter.com/mpolycar">@mpolycar</a> in NYC.</h3>
+          </div>
+        </div>
+        <div class="col-xs-4" align="center">
+            <h3>Curious about how this works?</h3>
+            <a class="btn" href="/about">Find out</a>
+        </div>
+
+        <div class="col-xs-4 pull-right">
+          <div class="footerWidget">
+
+            <h3>Think it's cool?</h3>
+            <ul class="socialNetwork pull-right">
+              <li><a href="#" class="tips" title="" data-original-title="share this on Facebook"><i class="icon-facebook-1 iconRounded"></i></a></li>
+              <li><a href="https://twitter.com/LIttleNeko1" class="tips" title="" data-original-title="share this on Twitter" target="_blank"><i class="icon-twitter-bird iconRounded"></i></a></li>
+              <li><a href="#" class="tips" title="" data-original-title="share this on Google+"><i class="icon-gplus-1 iconRounded"></i></a></li>
+              <li><a href="#" class="tips" title="" data-original-title="share this on Reddit"><i class="icon-linkedin-1 iconRounded"></i></a></li>
+              <li><a href="#" class="tips" title="" data-original-title="share this on HackerNews"><i class="icon-dribbble iconRounded"></i></a></li>
+            </ul>     
+            
+          </div>
+        </div>
+
+
+
+
+      </div>
+    </div>
+  </section>
 </footer>
+
+<!-- End footer -->
+
+<!-- ========= javascripts ============= -->
+    <script type="text/javascript" src="assets/js-plugin/respond/respond.min.js"></script>
+    <script type="text/javascript" src="assets/js-plugin/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js-plugin/jquery-ui/jquery-ui-1.8.23.custom.min.js"></script>
+    <!-- third party plugins  -->
+    <script type="text/javascript" src="assets/bootstrap.js"></script>
+    <script type="text/javascript" src="assets/js-plugin/easing/jquery.easing.1.3.js"></script>
+
+    <script type="text/javascript" src="assets/jquery.flexslider-min.js"></script>
+
+    <script type="text/javascript" src="assets/js-plugin/isotope/jquery.isotope.min.js"></script>
+    <script type="text/javascript" src="assets/js-plugin/neko-contact-ajax-plugin/js/jquery.form.js"></script>
+    <script type="text/javascript" src="assets/js-plugin/neko-contact-ajax-plugin/js/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="assets/js-plugin/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script type="text/javascript" src="assets/js-plugin/parallax/js/jquery.scrollTo-1.4.3.1-min.js"></script>
+    <script type="text/javascript" src="assets/js-plugin/parallax/js/jquery.localscroll-1.2.7-min.js"></script>
+    <script type="text/javascript" src="assets/js-plugin/parallax/js/jquery.stellar.min.js"></script>
+    <!-- <script type="text/javascript" src="assets/js-plugin/smoothscroll/SmoothScroll.js"></script> -->
+    <script type="text/javascript" src="assets/js-plugin/pageSlide/jquery.pageslide-custom.js"></script>
+    <script type="text/javascript" src="assets/js-plugin/jquery.sharrre-1.3.4/jquery.sharrre-1.3.4.min.js"></script>
+
+    <script type="text/javascript" src="assets/js-plugin/owl.carousel/owl-carousel/owl.carousel.min.js"></script>
+
+
+    <!-- Custom  -->
+    <script type="text/javascript" src="assets/custom.js"></script>
+
+  </body>
+  </html>
+
 
 </body>
 </html>
