--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 <html lang="en">
 <!--<![endif]-->
 <head>
-  <%= javascript_include_tag "application"%>
+  <%= javascript_include_tag "application" %>
   <%= stylesheet_link_tag "application" %>
     <!-- Basic Page Needs
     ================================================== -->
@@ -20,26 +20,24 @@
     <!-- CSS
     ================================================== -->
     <!-- Bootstrap  -->
-    <link type="text/css" rel="stylesheet" href="assets/bootstrap.min.css">
+    <%= stylesheet_link_tag "bootstrap.min" %>
     <!-- web font  -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800" rel="stylesheet" type="text/css">
     <!-- plugin css  -->
-    <link rel="stylesheet" type="text/css" href="assets/js-plugin/animation-framework/animate.css" />
-    <link rel="stylesheet" type="text/css" href="assets/js-plugin/magnific-popup/magnific-popup.css" />
-    <link type="text/css" rel="stylesheet" href="assets/js-plugin/isotope/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/flexslider.css" />
-    <link rel="stylesheet" type="text/css" href="assets/js-plugin/pageSlide/jquery.pageslide.css" />
-    <!-- Owl carousel-->
-    <link rel="stylesheet" href="assets/js-plugin/owl.carousel/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="assets/js-plugin/owl.carousel/owl-carousel/owl.theme.css">
+    <%= stylesheet_link_tag "js-plugin/animation-framework/animate" %>
+    <%= stylesheet_link_tag "js-plugin/magnific-popup/magnific-popup" %>
+    <%= stylesheet_link_tag "js-plugin/isotope/css/style" %>
+    <%= stylesheet_link_tag "flexslider" %>
+    <%= stylesheet_link_tag "js-plugin/pageSlide/jquery.pageslide" %>
+
     <!-- icon fonts -->
-    <link type="text/css" rel="stylesheet" href="assets/custom-icons.css">
-    <link type="text/css" rel="stylesheet" href="assets/custom-icons-ie7.css">
+    <%= stylesheet_link_tag "custom-icons" %>
+    <%= stylesheet_link_tag "custom-icons-ie7" %>
     <!-- Custom css -->
-    <link type="text/css" rel="stylesheet" href="assets/layout.css">
-    <link type="text/css" id="colors" rel="stylesheet" href="assets/green.css">
+    <%= stylesheet_link_tag "layout" %>
+    <%= stylesheet_link_tag "green" %>
     <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
-    <script src="assets/modernizr-2.6.1.min.js"></script>
+    <%= javascript_include_tag "modernizr-2.6.1.min" %>
     <!-- Favicons
     ================================================== -->
     <link rel="shortcut icon" href="assets/favicon.ico">
@@ -48,6 +46,8 @@
     <link rel="apple-touch-icon" sizes="114x114" href="assets/apple-touch-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="144x144" href="assets/apple-touch-icon-144x144.png">
   </head>
+<body data-spy="scroll" data-target="#scrollTarget" data-offset="150" id="fullScreen">
+
 
 <!-- ========== end header ========== -->
 
@@ -95,35 +95,31 @@
 <!-- End footer -->
 
 <!-- ========= javascripts ============= -->
-    <script type="text/javascript" src="assets/js-plugin/respond/respond.min.js"></script>
-    <script type="text/javascript" src="assets/js-plugin/jquery/1.8.3/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js-plugin/jquery-ui/jquery-ui-1.8.23.custom.min.js"></script>
+    <%= javascript_include_tag "js-plugin/respond/respond.min" %>
+    <%= javascript_include_tag "js-plugin/jquery/1.8.3/jquery.min" %>
+    <%= javascript_include_tag "js-plugin/jquery-ui/jquery-ui-1.8.23.custom.min" %>
+    <%= javascript_include_tag "js-plugin/respond/respond.min" %>
+    <%= javascript_include_tag "js-plugin/respond/respond.min" %>
+    <%= javascript_include_tag "js-plugin/respond/respond.min" %>
+    <%= javascript_include_tag "js-plugin/respond/respond.min" %>
     <!-- third party plugins  -->
-    <script type="text/javascript" src="assets/bootstrap.js"></script>
-    <script type="text/javascript" src="assets/js-plugin/easing/jquery.easing.1.3.js"></script>
+    <%= javascript_include_tag "bootstrap" %>
+    <%= javascript_include_tag "jquery.flexslider-min" %>
+    <%= javascript_include_tag "js-plugin/easing/jquery.easing.1.3" %>
+    <%= javascript_include_tag "js-plugin/isotope/jquery.isotope.min" %>
+    <%= javascript_include_tag "js-plugin/neko-contact-ajax-plugin/js/jquery.validate.min" %>
+    <%= javascript_include_tag "js-plugin/neko-contact-ajax-plugin/js/jquery/jquery.form" %>
+    <%= javascript_include_tag "js-plugin/parallax/js/jquery.scrollTo-1.4.3.1-min" %>
+    <%= javascript_include_tag "js-plugin/parallax/js/jquery.localscroll-1.2.7-min" %>
+    <%= javascript_include_tag "js-plugin/parallax/js/jquery.stellar.min" %>
 
-    <script type="text/javascript" src="assets/jquery.flexslider-min.js"></script>
-
-    <script type="text/javascript" src="assets/js-plugin/isotope/jquery.isotope.min.js"></script>
-    <script type="text/javascript" src="assets/js-plugin/neko-contact-ajax-plugin/js/jquery.form.js"></script>
-    <script type="text/javascript" src="assets/js-plugin/neko-contact-ajax-plugin/js/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="assets/js-plugin/magnific-popup/jquery.magnific-popup.min.js"></script>
-    <script type="text/javascript" src="assets/js-plugin/parallax/js/jquery.scrollTo-1.4.3.1-min.js"></script>
-    <script type="text/javascript" src="assets/js-plugin/parallax/js/jquery.localscroll-1.2.7-min.js"></script>
-    <script type="text/javascript" src="assets/js-plugin/parallax/js/jquery.stellar.min.js"></script>
     <!-- <script type="text/javascript" src="assets/js-plugin/smoothscroll/SmoothScroll.js"></script> -->
-    <script type="text/javascript" src="assets/js-plugin/pageSlide/jquery.pageslide-custom.js"></script>
-    <script type="text/javascript" src="assets/js-plugin/jquery.sharrre-1.3.4/jquery.sharrre-1.3.4.min.js"></script>
-
-    <script type="text/javascript" src="assets/js-plugin/owl.carousel/owl-carousel/owl.carousel.min.js"></script>
-
+    <%= javascript_include_tag "js-plugin/pageSlide/jquery.pageslide-custom" %>
+    <%= javascript_include_tag "js-plugin/jquery.sharrre-1.3.4/jquery.sharrre-1.3.4.min" %>
+    <%= javascript_include_tag "js-plugin/owl.carousel/owl-carousel/owl.carousel.min" %>
 
     <!-- Custom  -->
-    <script type="text/javascript" src="assets/custom.js"></script>
+    <%= javascript_include_tag "custom" %>
 
   </body>
-  </html>
-
-
-</body>
 </html>
