fix parallax issue (seems it had to do with media queries, and the slice id's not being added to the right css sections)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,6 +112,11 @@
     <%= javascript_include_tag "js-plugin/parallax/js/jquery.scrollTo-1.4.3.1-min" %>
     <%= javascript_include_tag "js-plugin/parallax/js/jquery.localscroll-1.2.7-min" %>
     <%= javascript_include_tag "js-plugin/parallax/js/jquery.stellar.min" %>
+    <%= javascript_include_tag "jquery.stellar" %>
+    <%= javascript_include_tag "jquery.stellar.min" %>
+    <%= javascript_include_tag "jquery.localscroll-1.2.7-min" %>
+    <%= javascript_include_tag "jquery.scrollTo-1.4.3.1-min" %>
+
 
     <!-- <script type="text/javascript" src="assets/js-plugin/smoothscroll/SmoothScroll.js"></script> -->
     <%= javascript_include_tag "js-plugin/pageSlide/jquery.pageslide-custom" %>
