--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -34,7 +34,7 @@
 <!-- header -->
 <!-- content -->
   <section id="homeFullScreen" data-stellar-background-ratio="0.5">
-    <div class="maskParent" >
+    <div class="maskParent">
       <div class="paralaxMask"></div>
       <div id="fullScreenSliderWrapper">
         <div id="logoBig">
@@ -165,12 +165,13 @@
     </div>
   </section>
 
-<!-- slice with quote --> 
+<!-- slice with quote -->
+<section>  
   <div id="paralaxSlice5" data-stellar-background-ratio="0.5">
     <div class="maskParent">
       <div class="paralaxMask"></div>
       <div class="paralaxText container">
-        <h1 class="">Pretty cool, right?</h1>
+        <h1>Pretty cool, right?</h1>
       </div>
     </div>
   </div>
