--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -1,4 +1,3 @@
-<body>
 <!-- Preloader -->
 <div id="preloader">
   <div id="status">
@@ -6,60 +5,6 @@
   </div>
 </div>
 <!-- Preloader -->
-<!-- Primary Page Layout 
-================================================== -->
-<!-- globalWrapper -->
-<div id="globalWrapper" class="localscroll">
-<!-- header -->
-  <header id="mainHeader" class="navbar-fixed-top" role="banner">
-    <div class="container">
-      <nav class="navbar navbar-default scrollMenu" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-          <a class="navbar-brand" href="#homeFullScreen">Kickammender.</a> 
-        </div>
-        <div class="collapse navbar-collapse navbar-ex1-collapse" id="scrollTarget">
-          <ul class="nav navbar-nav pull-right">
-            <li class="active"><a href="#homeFullScreen">Home</a> </li>
-            <li><a href="#recommendations">Your Recs</a> </li>
-            <li><a href="#profile">Your Profile</a> </li>
-            <li><a id="logout" href="/sessions/logout">Logout</a> </li>
-            <li><a href="#about">How This Works</a> </li>
-          </ul>
-        </div>
-
-      </nav>
-    </div>
-  </header>
-<!-- header -->
-<!-- content -->
-  <section id="homeFullScreen" data-stellar-background-ratio="0.5">
-    <div class="maskParent">
-      <div class="paralaxMask"></div>
-      <div id="fullScreenSliderWrapper">
-        <div id="logoBig">
-          <div class="paralaxText container customTitle">Kickammender<span class="titleDot">.</span></div>
-        </div>
-
-        <div class="flexslider" id="flexHome">
-          <ul class="slides">
-            <li>
-              <h2>Kickstarter recommendations</h2>              
-            </li>
-            <li>
-              <h2>...tailored specifically to you.</h2>
-            </li>
-            <li>
-              <h2>The only one of its kind.</h2>
-            </li>
-          </ul>
-        </div> 
-
-      </div>
-    </div>
-  </section>
-
-
 <!-- recommendations -->
   <% if @array %><!-- hidden section until recommendations are generated -->
   <section id="recommendations" class="slice color4 recommendations">
@@ -188,12 +133,12 @@
       <div class="col-sm-6">
         <center>
           <p>
-            <a href="<%= @most_similar.url %>"><img src="<%= @most_similar.image_url%>" class="img-responsive similar-image"></a>
+            <a href="<%= @most_similar.url %>"><img src="<%= @most_similar_image_url%>" class="img-responsive similar-image"></a>
           </p>
-        <h2><%= link_to @most_similar.name, @most_similar.url %></h2>
-                      <p><%= @most_similar.description %> </p>
-        <p>From <%= @most_similar.location %></p>
-        <p>Joined on <%= @most_similar.date_joined.strftime('%B %e, %Y') %></p>
+        <h2><%= link_to @most_similar.name, "http://www.kickstarter.com" + @most_similar.url %></h2>
+                      <p><%= @most_similar.description if !@most_similar.description.empty?%> </p>
+        <p><% if !@most_similar.location.empty? %>From <%= @most_similar.location %><% end %></p>
+        <p><% if !@most_similar.date_joined.empty? %>Joined on <%= @most_similar.date_joined %><% end %></p>
         </center>
       </div>
 
