more structure to the about page, added 2 sections, one for the analogy and another for why a recommendation engine is needed

--- a/app/views/admin/about.html.erb
+++ b/app/views/admin/about.html.erb
@@ -1,6 +1,45 @@
   <div id="paralaxSlice1" data-stellar-background-ratio="0.5"></div>
 <!-- about us -->
-        <section class="slice noPaddingBottom">
+        <section class="slice" id="about">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h1>About us</h1>
+                <h2 class="subTitle">Ashley is a versatile one page website template</h2>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4"> <img src="/assets/plant_growing_from_coins.jpg" alt="services" class="img-responsive"> </div>
+              <div class="col-sm-4">
+                <h2>Build your website, now!</h2>
+
+                <p>This did not seem to encourage the witness at all: he kept shifting  from one foot to the other, looking uneasily at the Queen, and in  his confusion he bit a large piece out of his teacup instead of the  bread-and-butter.
+                </p>
+
+                <p>Just at this moment Alice felt a very curious sensation, which puzzled  her a good deal until she made out what it was: she was beginning to  grow larger again, and she thought at first she would get up and leave  the court; but on second thoughts she decided to remain where she was as  long as there was room for her.
+                </p>
+              </div>
+
+              <div class="col-sm-4">
+                <h2>Ashley website template</h2>
+                <p> The Hatter's remark seemed to have no sort of meaning in it, and yet it was certainly English. 'I don't quite understand you,' she said, as politely as she could. 'The Dormouse is asleep again,' said the Hatter, and he poured a little hot tea upon its nose. </p>
+                <h3>I don't quite understand you</h3>
+                <p> The Dormouse shook its head impatiently, and said, without opening its eyes, 'Of course, of course; just what I was going to remark myself.' 'Have you guessed the riddle yet?' the Hatter said, turning to Alice again. </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <div id="paralaxSlice3" data-stellar-background-ratio="0.5">
+          <div class="maskParent">
+            <div class="paralaxMask"></div>
+            <div class="paralaxText">
+              <i class="icon-star iconBig"></i>
+              <blockquote class="mt15">Write drunk; edit sober.<br/><small>ERNEST HEMINGWAY </small></blockquote>
+            </div>
+          </div>
+        </div>
+        <section class="slice noPaddingBottom color4">
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
