--- a/app/views/admin/about.html.erb
+++ b/app/views/admin/about.html.erb
@@ -30,7 +30,7 @@
             </div>
           </div>
         </section>
-        <div id="paralaxSlice3" data-stellar-background-ratio="0.5">
+        <div id="formulaSlice" data-stellar-background-ratio="0.5">
           <div class="maskParent">
             <div class="paralaxMask"></div>
             <div class="paralaxText">
