--- a/app/views/admin/about.html.erb
+++ b/app/views/admin/about.html.erb
@@ -35,7 +35,8 @@
             <div class="paralaxMask"></div>
             <div class="paralaxText">
               <i class="icon-star iconBig"></i>
-              <blockquote class="mt15">Write drunk; edit sober.<br/><small>ERNEST HEMINGWAY </small></blockquote>
+              <blockquote class="mt15">O this learning, what a thing it is! 
+                <br/><small>SHAKESPEARE</small></blockquote>
             </div>
           </div>
         </div>
@@ -50,24 +51,20 @@
 
             <div class="row">
               <div class="col-sm-4">
-                <h2>[some math-y picture]</h2>
-                <h3>A Computerless World</h3>
+                <h2>A Computerless World</h2>
                 <p>Lets forget for a moment that computers and the web exists. Say you are at a fundraising event where 50,000 projects are looking for backers and there are 200,000 people that are looking for projects to back. Currently, the situation is extremely chaotic. It is similar to being in a football stadium with 50,000 people that have projects and are looking for your funding. The editors choice panel on kickstarter is like having a few lucky people being broadcast on the jumbotron in the stadium. The new projects panel is like hanging out by the entrance and seeing the flood new projects coming in. Its a mess.</p>
-                <p>What the Kickammender recommendation engine does is transform the stadium into a skyscraper. As you enter the lobby of the building, a receptionist analyses your interests and tells you to go to room 17 on the 62nd floor. In this room is a round table with prolific kickstarter backers. All of these people have similar interests and personalities to you. The people that love theater, find comics mildly interesting, and hate technology will probably be placed at the same table. The receptionist was very good at placing people with similar interests at the same table. Some tables might have 50 people and others might only have 10 people.</p>
+                <p>What the Kickammender recommendation engine does is transform the stadium into a skyscraper. As you enter the lobby of the building, a receptionist analyses your interests and tells you to go to room 17 on the 62nd floor.</p>
+
 
              </div>
               <div class="col-sm-4">
-                <h2>Step 1</h2>
-                <h3>Log in with Facebook</h3>
+                <p> In this room is a round table with prolific kickstarter backers. All of these people have similar interests and personalities to you. The people that love theater, find comics mildly interesting, and hate technology will probably be placed at the same table. The receptionist was very good at placing people with similar interests at the same table. Some tables might have 50 people and others might only have 10 people.</p>
                 <p>At the dining table, people talk about the projects that they have backed and the user takes note of the projects that have been mentioned often that are still looking for funding. These are true recommendations. They are based off of actual backers and not what the people proposing the project say. More importantly, the backers that we are listening to are the users that have shown to have similar interests to the us.</p>
-                <p>Now imagine we get a chance to talk to everyone at our table and we find that we have the most similar interests to a specific user. We take note of that person so that we can keep in touch in the future. When they find any new projects that they would like to back they let us know since we will probably also find that project interesting as well.</p>
 
               </div>
 
               <div class="col-sm-4">
-                <h2>Step 2</h2>
-                <h3>Make your recommendations better</h3>
-                <p></p>
+                <p>Now imagine we get a chance to talk to everyone at our table and we find that we have the most similar interests to a specific user. We take note of that person so that we can keep in touch in the future. When they find any new projects that they would like to back they let us know since we will probably also find that project interesting as well.</p>
                 <p>After a busy day of networking and a full stomack we take the elevator back down to the lobby, we thank the receptionist for choosing such an amazing room for you and go home.</p>
                 <p>Now imagine an engine that does all of this with a single mouse click. Welcome to the beauty of Kickammender.</p> 
  
@@ -78,7 +75,67 @@
               </div>
             </div>
           </div>
-        <!-- about us -->
-
         </div>
+
+        <section class="slice" id="about">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h1>Categorizing Users</h1>
+                <h2 class="subTitle">How to figure out a persons interests</h2>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4"> <img src="/assets/plant_growing_from_coins.jpg" alt="services" class="img-responsive"> </div>
+              <div class="col-sm-4">
+                <p>The first question you may ask is how we classify a persons interests. We look at the categories of all of the projects the person has backed and give them scores based on that. For example if Alex backed 6 Art projects, another 3 projects that had to do with Theater, 2 Comics, 2 Design and 1 Film then we normalize these scores and give him a 100 in Art, 50 Theater, 33 in Comics and Design and 17 in Film. What happens when we have a new user that hasnt backed any kickstarter projects? We look at his facebook likes and map the facebook likes categories to the kickstarter categories. Say Albert hasn't backed any kickstarter projects but he has liked 6 Artists pages on facebook, 3 theaters, 2 comic books, 2 design pages and 1 movie then he would be given the same score as Alex. </p>
+                <img src="/assets/youlikethis.jpg" alt="facebook like">
+              </div>
+
+              <div class="col-sm-4">
+                <h2>Ashley website template</h2>
+                <p> The Hatter's remark seemed to have no sort of meaning in it, and yet it was certainly English. 'I don't quite understand you,' she said, as politely as she could. 'The Dormouse is asleep again,' said the Hatter, and he poured a little hot tea upon its nose. </p>
+                <h3>I don't quite understand you</h3>
+                <p> The Dormouse shook its head impatiently, and said, without opening its eyes, 'Of course, of course; just what I was going to remark myself.' 'Have you guessed the riddle yet?' the Hatter said, turning to Alice again. </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="slice noPaddingBottom color4">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h1>Grouping Together Like-Minded Individuals</h1>
+                <h2 class="subTitle">How the K Means Clustering Algorithm Works</h2>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <h2>K Means Clustering</h2>
+                <p>The next step is to group people with similar interests into groups or clusters. We do this by using a Machine Learning algorithm called K Means Clustering. This takes in data points and the number of groups we want and it outputs centers of the groups and the member of each group.</p> 
+                <p>We specify the number of clusters we want and the algorithm will separate the points or in this case the users into different clusters. This visual shows how 2 dimensional datapoints are separated into 4 clusters. [http://shabal.in/visuals/kmeans/2.html](K Means Clustering gif). This shows how the algorithm works in 2 dimensions. You can imagine the axiis being how much a person likes art and the other being Technology. Kickstarter however has 13 categories. We wrote the algorithm to work in 13 dimensions. Harder to visualize but same kind of principle.</p>
+             </div>
+              <div class="col-sm-4">
+                <img class="kmeans-gif" src="/assets/kmeans2.gif" width="100%" alt="K Means Clustering gif" loop=infinite>
+                <p> In this room is a round table with prolific kickstarter backers. All of these people have similar interests and personalities to you. The people that love theater, find comics mildly interesting, and hate technology will probably be placed at the same table. The receptionist was very good at placing people with similar interests at the same table. Some tables might have 50 people and others might only have 10 people.</p>
+                <p>At the dining table, people talk about the projects that they have backed and the user takes note of the projects that have been mentioned often that are still looking for funding. These are true recommendations. They are based off of actual backers and not what the people proposing the project say. More importantly, the backers that we are listening to are the users that have shown to have similar interests to the us.</p>
+
+              </div>
+
+              <div class="col-sm-4">
+                <p>Now imagine we get a chance to talk to everyone at our table and we find that we have the most similar interests to a specific user. We take note of that person so that we can keep in touch in the future. When they find any new projects that they would like to back they let us know since we will probably also find that project interesting as well.</p>
+                <p>After a busy day of networking and a full stomack we take the elevator back down to the lobby, we thank the receptionist for choosing such an amazing room for you and go home.</p>
+                <p>Now imagine an engine that does all of this with a single mouse click. Welcome to the beauty of Kickammender.</p> 
+ 
+                <br>
+                <center>
+                <p><a class="btn" href="/auth/facebook"><i class="icon-facebook-1"></i>Get started</a></p>
+              </center>
+              </div>
+            </div>
+          </div>
+        </div>
+
 
